Support per-day session times and session deletion
